<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yapp</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="app_str">app_str</string>
    <string name="dialog">Dialog</string>
    <string name="title_activity_sec">SecActivity</string>
    <string name="action_settings">Settings</string>
    <string name="two_activity">two activity</string>
    <string name="my_btn">my btn</string>
    <string name="my_btn2">my btn2</string>
    <string name="my_text">my text</string>
    <string name="three_activity">Three activity</string>
    <string name="run_pi">run pi</string>
    <string name="run_bc">run bc</string>
    <string name="run_task">run task</string>
    <string name="title_activity_slide">SlideActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="slide">Slide</string>

</resources>