<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >
    
    <TextView 
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_text"
        />
    <Button
        android:id="@+id/btRunPi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/run_pi"
        android:onClick="onClick"
        >
    </Button>
    <Button
        android:id="@+id/btRunTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/run_task"
        android:onClick="onClickTask"
        >
    </Button>

    <EditText
        android:id="@+id/txtEdit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        
    </EditText>
</LinearLayout>
